--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=/opt/android-sdk
-flutter.sdk=/sdks/flutter
+sdk.dir=C:\\Users\\Admin\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Users\\Admin\\Documents\\flutter
