--- a/ios/Podfile
+++ b/ios/Podfile
@@ -44,6 +44,9 @@ post_install do |installer|
 
         # dart: PermissionGroup.bluetooth
         'PERMISSION_BLUETOOTH=1',
+
+         # dart: [PermissionGroup.location, PermissionGroup.locationAlways, PermissionGroup.locationWhenInUse]
+        'PERMISSION_LOCATION=1',
       ]
     end
   end
