--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: bleiot
+name: ble2024
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -31,7 +31,7 @@ dependencies:
   device_info_plus: 9.1.0
   device_info_plus_platform_interface: 7.0.0
   flutter_animate: 4.5.0
-  flutter_blue_plus: 1.32.12
+  flutter_blue_plus:
   flutter_cache_manager: 3.3.1
   flutter_spinkit: 5.2.0
   font_awesome_flutter: 10.7.0
